--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <p>This is new paragraph</p>
+    </div>
     <h1>jeeva</h1>
 </body>
 </html>
